[project]
name = "indico-plugin-caddy-auth"
description = "Caddy forward_auth authentication endpoint for Indico"
readme = "README.md"
license = "MIT"
authors = [
    {email = "operators@fortrancon.org"},
]
classifiers = [
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",

]
requires-python = '>=3.12.2, <3.13'
dynamic = ["version"]

[project.entry-points.'indico.plugins']
caddy_auth = "indico_caddy_auth.plugin:CaddyAuthPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "indico_caddy_auth/__init__.py"
